--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="resume">
     <!-- LEFT SIDEBAR -->
     <aside class="sidebar">
-      <img src="odb.jpg" alt="Onzima Dennis" style="margin-left: 50px;" width="128" height="128">
+      <img src="C:\Users\Dennis\Pictures\odb.jpg" alt="Onzima Dennis" style="margin-left: 50px;" width="128" height="128">
       <h3>CONTACT</h3>
 
       <p>Ovujo Town <br>Maracha District, Uganda</p>
@@ -156,3 +156,4 @@
   </div>
 </body>
 </html>
+
